version/0.4.0b1/_sources/api/ansys/sam/sysml2/builder/classes/project_impl/ProjectImpl.rst.txt






:class:`ProjectImpl`
====================


.. py:class:: ansys.sam.sysml2.builder.classes.project_impl.ProjectImpl(project_id: str, name: str)

   Bases: :py:obj:`ansys.sam.sysml2.classes.project.Project`


   
   Provides a private class for project building.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: ProjectImpl

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~add_element`
            - Add an element to the project environment.
          * - :py:attr:`~update_unresolved_fields`
            - Update all unresolved fields.
          * - :py:attr:`~get_id`
            - Get the project ID.
          * - :py:attr:`~get_root_package`
            - Get the root package.
          * - :py:attr:`~get_libraries_packages`
            - Get the libraries packages.
          * - :py:attr:`~get_name`
            - Get the project name.
          * - :py:attr:`~find_element_by_id`
            - Find an element by its ID.
          * - :py:attr:`~find_elements_by_name`
            - Find all elements by name.
          * - :py:attr:`~start_transactional_mode`
            - Start a transactional mode for model edition.
          * - :py:attr:`~stop_transactional_mode`
            - Stop the current transaction.








Import detail
-------------

.. code-block:: python

    from ansys.sam.sysml2.builder.classes.project_impl import ProjectImpl



Method detail
-------------

.. py:method:: add_element(element: ansys.sam.sysml2.meta_model.element.Element)

   
   Add an element to the project environment.
















   ..
       !! processed by numpydoc !!

.. py:method:: update_unresolved_fields(unresolved_fields: list[ansys.sam.sysml2.classes.unresolved_field.UnresolvedField])

   
   Update all unresolved fields.


   :Parameters:

       **unresolved_fields** : :obj:`List`\[:obj:`UnresolvedField`]
           List of all new fields.














   ..
       !! processed by numpydoc !!

.. py:method:: get_id() -> str

   
   Get the project ID.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_root_package() -> ansys.sam.sysml2.meta_model.package.Package

   
   Get the root package.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_libraries_packages() -> list[ansys.sam.sysml2.meta_model.package.Package]

   
   Get the libraries packages.





   :Returns:

       :obj:`List`\[:obj:`Package`]
           List of libraries packages.











   ..
       !! processed by numpydoc !!

.. py:method:: get_name() -> str

   
   Get the project name.
















   ..
       !! processed by numpydoc !!

.. py:method:: find_element_by_id(element_id: str) -> ansys.sam.sysml2.meta_model.element.Element | None

   
   Find an element by its ID.


   :Parameters:

       **element_id** : :class:`python:str`
           Element ID.



   :Returns:

       :obj:`Element`
           Element retrieved.











   ..
       !! processed by numpydoc !!

.. py:method:: find_elements_by_name(element_name: str) -> list[ansys.sam.sysml2.meta_model.element.Element]

   
   Find all elements by name.


   :Parameters:

       **element_name** : :class:`python:str`
           Name of elements.



   :Returns:

       :obj:`List`\[:obj:`Element`]
           List of elements retrieved.











   ..
       !! processed by numpydoc !!

.. py:method:: start_transactional_mode() -> None

   
   Start a transactional mode for model edition.

   Direct model updates are suspended and every change is registered until the
   transaction is committed or stopped. Calculated modifications are applied only
   once all changes are committed.















   ..
       !! processed by numpydoc !!

.. py:method:: stop_transactional_mode() -> None

   
   Stop the current transaction.

   Close the current transaction and commit all changes to the server.















   ..
       !! processed by numpydoc !!




